# nlibc

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.c  make_sources.sh
include/: macro_vector.h  n_alloc.h  n_allocator.h  n_ast.h  n_buffer.h  n_common.h  n_cstr.h  n_hashmap.h  n_list.h  n_mem.h  n_print.h  n_protect.h  n_stack.h  n_string.h  n_tree.h  n_vector.h  nlibc.h
include/nlibc/: allocator.h  buffer.h  common.h  hashmap.h  list.h  nlibc.h  protect.h  stack.h  string.h  vector.h
src/allocator/: allocator.c
src/buffer/: buffer.c
src/hashmap/: hashmap.c
src/list/: list.c  list_alloc.c
src/macro_vector/: macro_vector.c
src/memory/: alloc.c  memory.c  protect.c
src/n_alloc/: alloc.c  buffer.c
src/n_allocator/: allocator.c
src/n_ast/: ast_new.c  tokenizing.c
src/n_buffer/: buffer.c
src/n_cstr/: str_array.c  str_comparing.c  str_copying.c  str_counting.c  str_split.c
src/n_hashmap/: hashmap.c
src/n_list/: list.c  list_alloc.c
src/n_mem/: memory.c
src/n_print/: put.c  putn.c
src/n_protect/: protect.c
src/n_stack/: stack.c
src/n_string/: split.c  str.c  str_array.c  str_comparing.c  str_copying.c  str_counting.c  str_split.c  strarr.c  string.c  string_window.c
src/n_tree/: tree.c  tree_alloc.c
src/n_vector/: vector.c  vector_alloc.c  vector_search.c
src/printing/: put.c  putn.c
src/protect/: protect.c
src/stack/: stack.c
src/string/: strarr.c  string.c  string_view.c  strlen.c
src/vector/: vector.c  vector_alloc.c  vector_search.c
tester/: .clangd  CMakeLists.txt  Makefile  testfile.txt
tester/include/: tester.h
tester/src/: buffer.c  hashmap.c  lists.c  macro_vector.c  (+6 more)
